--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
         </select><br />
         <br />
 
-        <label for="płeć">Płeć:</label><br />
-        <input type="radio" name="gender" id="płeć">Mężczyzna
-        <input type="radio" name="gender">Kobieta<br />
+        <p>Płeć:</p>
+        <label>Mężczyzna<input type="radio" name="gender"></label>
+        <label>Kobieta<input type="radio" name="gender"></label><br />
         <br />
 
         <label for="zgoda">Zgoda na przetwarzanie danych osobowych</label><br />
         <input type="checkbox" name="agreement" id="zgoda"><br />
         <br />
 
-        <label for="wiadomość">Wiadomość</label><br />
-        <textarea maxlength="1500" name="message" id="wiadomość"></textarea><br />
+        <label for="wiadomosc">Wiadomość</label><br />
+        <textarea maxlength="1500" name="message" id="wiadomosc"></textarea><br />
 
         <input type="submit" value="Wyślij" > </form> 
     
